<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="drawer_strings">
        <item>Categories</item>
        <item>Map</item>
        <item>Panier</item>
        <item>Profil</item>
        <item>Preferences</item>
    </string-array>


    <string name="app_name">BonAp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_button">Create User</string>
    <string name="title_activity_login">Sign In</string>
    <string name="send">Send</string>
    <string name="create_conf_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="drawer_profile_image_desc">Profil pic</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_logout_string">Logout</string>
    <string name="pref_logout_summary_string">Delete all cached user data</string>
    <string name="title_activity_receipts_item">Recipe</string>
    <string name="title_activity_recipe">Receipts</string>
    <string name="title_activity_receipts">Receipts</string>
    <string name="title_activity_categories">Categories</string>
    <string name="profile_account_icon">Icon Account</string>
    <string name="profile_image_desc">Profil Pic</string>
    <string name="grid_image_desc">Item Image</string>
    <string name="list_ingredients">Ingredients List</string>
    <string name="title_activity_list_ingredients">List Ingredients</string>
    <string name="cmd">Commander</string>
    <string name="title_activity_command">Order</string>
    <string name="order">Order</string>
    <string name="qt">Quantity</string>
    <string name="title_activity_panier">Panier</string>
    <string name="sup">Sup</string>
    <string name="infos">Infos</string>

</resources>
