<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kant.artmevisual.ProfileActivity">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/profile_image_desc"
                android:cropToPadding="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginTop="200dp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/keyline_1"
                android:paddingRight="@dimen/keyline_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="32dp"
                        android:contentDescription="@string/profile_account_icon"
                        android:src="@drawable/ic_person_grey600_24dp" />

                    <TextView
                        android:id="@+id/user_completename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <View xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="7dp"
                    android:background="#e5e5e5"
                    android:gravity="start|center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="32dp"
                        android:contentDescription="@string/profile_account_icon"
                        android:src="@drawable/ic_email_grey600_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
